feat: delete backup
