# src/lib/api/http-app-router.ts
@@ -18,6 +18,7 @@ import createGetVersionHandler from '../../api/get-version.js';
 import createGetUserBackupsHandler from '../../api/backups/get.js';
 import createPostUserBackupHandler from '../../api/backups/post-backup.js';
 import type { ApiMetrics } from './types.js';
+import createDeleteUserBackupHandler from '../../api/backups/delete-backup.js';
 
 export function createHttpAppRouter(opts: {
 	disposer: Disposer,
@@ -113,6 +114,7 @@ export function createHttpAppRouter(opts: {
 	app.get('/schema', createGetSchemaHandler({ openApiDocYaml }))
 	app.get('/backups/:publicKey', createGetUserBackupsHandler({ validators, storage }))
 	app.post('/backups/:publicKey/:userId', createPostUserBackupHandler({ validators, storage, }))
+	app.delete('/backups/:publicKey/:userId', createDeleteUserBackupHandler({ validators, storage, }))
 
 	// 404
 	app.use(function(_req, _res, next) {
